feat: Add gatsby-plugin-copy-files-enhanced to handle static files

--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "gatsby": "^2.31.1",
+    "gatsby-plugin-copy-files-enhanced": "^1.1.1",
     "gatsby-theme-kb": "latest"
   }
 }
