feat: add 'gatsby-remark-copy-linked-files' to serve static file in relative path

--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.31.1",
     "gatsby-plugin-copy-files-enhanced": "^1.1.1",
+    "gatsby-remark-copy-linked-files": "^2.10.0",
     "gatsby-theme-kb": "latest"
   }
 }
