--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -32,9 +32,17 @@ jobs:
         run: yarn
         working-directory: _layouts
 
+      - name: Get repository name
+        run: echo ::set-env name=REPOSITORY_NAME::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}')
+        shell: bash
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+
       - name: Build Site
         run: yarn build
         working-directory: _layouts
+        env:
+          PATH_PREFIX: /${{ env.REPOSITORY_NAME }}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
