--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Get repository name
         run: echo ::set-env name=REPOSITORY_NAME::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}')
         shell: bash
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
 
       - name: Build Site
         run: yarn build
