--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -17,6 +17,9 @@
     "gatsby": "^2.31.1",
     "gatsby-plugin-copy-files-enhanced": "^1.1.1",
     "gatsby-remark-copy-linked-files": "^2.10.0",
-    "gatsby-theme-kb": "latest"
+    "gatsby-remark-prismjs": "^3.13.0",
+    "gatsby-theme-kb": "latest",
+    "prism-themes": "^1.5.0",
+    "prismjs": "^1.23.0"
   }
 }
