--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -13,6 +13,9 @@
   ],
   "author": "chenmin",
   "license": "MIT",
+  "engines": {
+    "node": "<=16.12.0"
+  },
   "dependencies": {
     "gatsby": "^4.6.2",
     "gatsby-plugin-copy-files-enhanced": "^1.1.1",
